# shell

./: .gitignore  CLAUDE.md  README.md  product.md  skills-lock.json
.claude/: settings.json  settings.local.json
assets/: slide5.html
docs/: agent-mode.md  ai-execution-agent.md  aws-deployment.md  deck.md  deepbook-integration.md  demo-cheat-card.md  demo-guide.md  demo-script.md  enclave-redeploy.md  republish-brief.md  rwa-integration.md  seal-in-nitro.md  self-match-deploy.md  settle-fix-plan.md  shell-agent-upgrade.md  walrus-agent-tooling.md
enclave/: Cargo.toml
enclave-nitro/: README.md
enclave-nitro/framework-patches/: lib.rs  main.rs
enclave-nitro/scripts/: assemble.sh
enclave/src/: lib.rs  match_payload.rs  matcher.rs  order.rs  signer.rs
mcp/walrus-mcp/: README.md  package-lock.json  package.json  tsconfig.json
move/: Move.toml  Published.toml
move/sources/: attestation.move  ioi.move  pool.move  settlement.move  shell.move
move/tests/: attestation_tests.move  pool_tests.move  self_match_tests.move  settlement_tests.move
nautilus/: expose_enclave.sh
rwa-mock/: Move.toml  Published.toml
rwa-mock/sources/: tbill.move
shell-agent/: .env.example  .gitignore  LICENSE  README.md  mcp.example.json  mcp.json  package-lock.json  package.json  tsconfig.json
shell-agent/plugins/: README.md  sample.mjs  sample.ts
ts-sdk/: LICENSE  README.md  package-lock.json  package.json  tsconfig.json
ts-sdk/src/: tx.ts  (+5 more)
ui-guide/: shell_finance_technical_specification_summary.txt
web/: next.config.ts  package-lock.json  package.json  tsconfig.json
(+108 files in other folders)
