[package]
name = "shell-enclave"
version = "0.1.0"
edition = "2021"
publish = false
description = "Shell Finance matching enclave. BCS-mirrored types + Ed25519 signer for shell::attestation."

[dependencies]
bcs = "0.1"
ed25519-dalek = "2"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
thiserror = "2"

[dev-dependencies]
hex = "0.4"
